// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item Class Tests (No AWS Operations) Correctly returns parsed value and throws for invalid 1`] = `
Object {
  "id": "foo",
}
`;

exports[`Item Class Tests (No AWS Operations) Gets the primary attribute from a specified item 1`] = `
Object {
  "id": "test",
}
`;

exports[`Item Class Tests (No AWS Operations) Gets the primary attribute from a specified item 2`] = `"Unable to find primary key \\"id\\" in provided object."`;
